avoid breaks inside li blockquote and after dt

--- a/src/assets/styles/_elements.grouping.css
+++ b/src/assets/styles/_elements.grouping.css
@@ -13,3 +13,28 @@
 p {
   @extend .u-break-inside-avoid;
 }
+
+/* -----------------------------------
+ # Quotes
+ ----------------------------------- */
+
+blockquote {
+  @extend .u-break-inside-avoid;
+}
+
+/* -----------------------------------
+ # List
+ ----------------------------------- */
+
+li {
+  @extend .u-break-inside-avoid;
+}
+
+
+/* -----------------------------------
+ # Definition list
+ ----------------------------------- */
+
+dt {
+  @extend .u-break-after-avoid;
+}
